<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="kelp.pagetransformer.MainActivity" >

    <item
        android:id="@+id/action_transformer_default"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/action_transformer_default"/>
	<item
        android:id="@+id/action_transformer_depth"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/action_transformer_depth"/>
	<item
        android:id="@+id/action_transformer_zoomout"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/action_transformer_zoomout"/>
	<item
        android:id="@+id/action_transformer_upperfan"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/action_transformer_upperfan"/>
	<item
        android:id="@+id/action_transformer_lowerfan"
        android:orderInCategory="5"
        android:showAsAction="never"
        android:title="@string/action_transformer_lowerfan"/>
	<item
        android:id="@+id/action_transformer_cube"
        android:orderInCategory="6"
        android:showAsAction="never"
        android:title="@string/action_transformer_cube"/>
	<item
        android:id="@+id/action_transformer_turnstile"
        android:orderInCategory="6"
        android:showAsAction="never"
        android:title="@string/action_transformer_turnstile"/>
</menu>
